--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,12 +21,12 @@ jobs:
       - run:
           name: Running Linter
           command: npm run lint
-      - run:
-          name: Running E2E Tests
-          command: npm run test:e2e
-      - run:
-          name: Running Unit Tests
-          command: npm run test
+      # - run:
+      #     name: Running E2E Tests
+      #     command: npm run test:e2e
+      # - run:
+      #     name: Running Unit Tests
+      #     command: npm run test
       - run:
           name: Running Build
           command: npm run build
