--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,11 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     ports:
-      - '54320:5432'
+      - '5432:5432'
     environment:
-      POSTGRES_DB: to_do_app
-      POSTGRES_USER: test_user
-      POSTGRES_PASSWORD: test_user_password
+      POSTGRES_DB: todoapp
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
 
 volumes:
   pgdata:
