--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,9 @@ jobs:
       - run:
           name: Running Linter
           command: npm run lint
-      # - run:
-      #     name: Running Unit Tests
-      #     command: npm run test
+      - run:
+          name: Running Unit Tests
+          command: npm run test
       # - run:
       #     name: Running E2E Tests
       #     command: npm run test:e2e
