--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,10 @@ jobs:
       - image: circleci/node:12.16.1
     steps:
       - checkout
+      - persist_to_workspace:
+        root: .
+        paths:
+          - .
       - restore_cache:
           keys:
             - dependencies-{{ checksum "package.json" }}
@@ -21,16 +25,11 @@ jobs:
       - run:
           name: Running Unit Tests
           command: npm run test
-      # - run:
-      #     name: Running E2E Tests
-      #     command: npm run test:e2e
       - run:
           name: Running Build
           command: npm run build
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
+      - store_test_results:
+          path: test-results
 
 workflows:
   version: 2
