--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,13 @@ version: 2
 jobs:
   test_and_build:
     docker:
-      - image: circleci/node:lts
+      - image: circleci/node:12.16.1
     steps:
       - checkout
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
       - restore_cache:
           keys:
             - dependencies-{{ checksum "package.json" }}
@@ -16,24 +20,19 @@ jobs:
             - node_modules
           key: dependencies-{{ checksum "package.json" }}
       - run:
-          name: Running Formatter
-          command: npm run format
-      - run:
           name: Running Linter
           command: npm run lint
-      # - run:
-      #     name: Running Unit Tests
-      #     command: npm run test
+      - run:
+          name: Running Unit Tests
+          command: npm run test
       # - run:
       #     name: Running E2E Tests
       #     command: npm run test:e2e
       - run:
           name: Running Build
           command: npm run build
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
+      - store_test_results:
+          path: test-results
 
 workflows:
   version: 2
