--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nestjs-todo",
   "version": "0.0.1",
-  "description": "",
-  "author": "Backend code for a Trello clone with Nestjs & AWS",
+  "description": "Backend code for a TODO app using NestJs",
+  "author": "Andy Cathcart",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -14,11 +14,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test": "NODE_ENV=development jest",
+    "test:watch": "NODE_ENV=development jest --watch",
+    "test:cov": "NODE_ENV=development jest --coverage",
+    "test:debug": "NODE_ENV=development node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "NODE_ENV=development jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
